--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,12 @@ buildscript {
     }
 }
 
+
+project.ext {
+    supportVersion = "27.0.2"
+    sdkVersion = 27
+}
+
 allprojects {
     repositories {
         google()
