build gradle - add placeholder anim library Main - add activity_main layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     implementation 'com.github.HoraApps:Liz:0.5.4'
-
+    compile 'com.github.jetradarmobile.desertplaceholder:desertplaceholder:1.2.4'
 }
