--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'androidx.core:core-ktx:0.1'
     implementation "org.jetbrains.anko:anko:$anko_version"
 
     implementation "com.android.support:appcompat-v7:$supportVersion"
