--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,9 @@ dependencies {
 
     implementation 'com.github.HoraApps:Liz:0.5.4'
     compile 'com.github.jetradarmobile.desertplaceholder:desertplaceholder:1.2.4'
+
+    //the core iconcis library (without any widgets)
+    implementation "com.mikepenz:iconics-core:3.0.2@aar"
+    //this adds all ui view widgets (IconicsButton, IconicsImageView, ...)
+    implementation "com.mikepenz:iconics-views:3.0.2@aar"
 }
