--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,14 @@ dependencies {
     implementation "com.mikepenz:iconics-core:3.0.2@aar"
     //this adds all ui view widgets (IconicsButton, IconicsImageView, ...)
     implementation "com.mikepenz:iconics-views:3.0.2@aar"
+
+    compile 'jp.wasabeef:recyclerview-animators:2.3.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+// Because RxAndroid releases are few and far between, it is recommended you also
+// explicitly depend on RxJava's latest version for bug fixes and new features.
+    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
 }
