--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,20 +43,26 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     implementation 'com.github.HoraApps:Liz:0.5.4'
-    compile 'com.github.jetradarmobile.desertplaceholder:desertplaceholder:1.2.4'
+    implementation 'com.github.jetradarmobile.desertplaceholder:desertplaceholder:1.2.4'
 
     //the core iconcis library (without any widgets)
     implementation "com.mikepenz:iconics-core:3.0.2@aar"
     //this adds all ui view widgets (IconicsButton, IconicsImageView, ...)
     implementation "com.mikepenz:iconics-views:3.0.2@aar"
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.2.original@aar'
+    implementation 'com.mikepenz:community-material-typeface:2.0.46.1@aar'
+    implementation 'com.mikepenz:fontawesome-typeface:4.7.0.2@aar'
 
-    compile 'jp.wasabeef:recyclerview-animators:2.3.0'
+    implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
 
     implementation 'com.github.bumptech.glide:glide:4.6.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+    kapt 'com.github.bumptech.glide:compiler:4.6.1'
 
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 // Because RxAndroid releases are few and far between, it is recommended you also
 // explicitly depend on RxJava's latest version for bug fixes and new features.
-    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+
+    implementation "com.orhanobut:hawk:2.0.1"
 }
