--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,14 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.fingerprint"
+        android:required="false"/>
 
     <application
         android:name=".App"
@@ -25,6 +33,12 @@
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
         <activity android:name=".activities.SettingActivity">
+        </activity>
+        <activity android:name=".activities.DonateActivity">
+        </activity>
+        <activity android:name=".activities.SettingsActivity">
+        </activity>
+        <activity android:name=".activities.AboutActivity">
         </activity>
     </application>
 
